[package]
name = "bevy_rapier_kinematics"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
bevy_flycam = "0.14.0"
bevy-inspector-egui = "0.25.1"
k = "0.31.0"
bevy-trait-query = "0.5.1"
rand = "0.8.5"
bevy_rapier3d = "0.27.0"
thiserror = "1.0.63"
derivative = "2.2.0"
parking_lot = "0.12.3"
bevy_egui = "0.28.0"

[profile.dev.package."*"]
opt-level = 3
